feat : Add sequence type and sequence operation